Changed background colors for mobile screens

--- a/index.html
+++ b/index.html
@@ -271,6 +271,13 @@
             </div>
             <div class="timeline" >
                 <ul>
+                    <li class="date" data-date="Nov 2018" data-aos="fade-up" data-aos-duration="300ms">
+                        <h1>Speed Calculator</h1>
+                        <p>Designed a hardware arduino based project which was calculating the speed of objects with the help of IR sensors.
+                        </p>
+                        <br>
+                        <a href="https://github.com/Sarvesh0007/Speed-calculator.git" class="cta">GitHub repository</a>
+                    </li>
                     <li class="date" data-date="May 2020-June 2020" data-aos="fade-up" data-aos-duration="300ms">
                         <h1>Benaras</h1>
                         <p>Designed a well communicating UI website of my city ‘Varanasi’ designed by me,which lets you inspect the beauty of Banaras,Hotels Booking,Food exploration all at one place.
