--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         </div>
     </section>
 
-    <!-- <section class="portfolio" id="portfolio">
+     <section class="portfolio" id="portfolio">
         <div class="container">
             <div class="section-heading">
                 <h1>Skills</h1>
@@ -260,9 +260,9 @@
             </div>
             
         </div>
-    </section> -->
+    </section> 
 
-    <section class="experience" id="experience">
+    <!-- <section class="experience" id="experience">
         <div class="container" >
             <div class="section-heading">
                 <h1>Experience</h1>
@@ -319,14 +319,14 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
    
     <footer class="copyright">
         <div class="up" id="up">
             <i class="fas fa-chevron-up"></i>
         </div>
-        <p>&copy; 2021 Sarvesh Mishra</p>
+        <p>&copy; 2024 Sarvesh Mishra</p>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     
